--- a/games.html
+++ b/games.html
@@ -25,7 +25,7 @@
                                 <li class="menu__item">
                                     <a href="./index.html" class="menu__ref">Главная</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="./games.html" class="menu__ref">Игры</a>
                                 </li>
                                 <li class="menu__item">
@@ -113,42 +113,42 @@
             <div class="container">
                 <h2 class="inner-section__title">Партнеры</h2>
                 <ul class="partners">
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--pobeda">
                         <a href="" class="partners__link">
-                            <img src="./gamesimg/pobeda.png" alt="Pobeda logo" class="partners__img">
+                            <img src="./gamesimg/pobeda.png" alt="s7 logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--s7">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/s7.png" alt="s7 logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--quizplease">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/Quizpliz.png" alt="quizplease logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--leaguequiz">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/leaguequiz.png" alt="ligaquiz logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--questroom">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/questroom.png" alt="questroom logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--pegasus">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/pegasus.png" alt="pegasus logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--airbaltic">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/airbaltic.png" alt="airbaltic logo" class="partners__img">
                         </a>
                     </li>
-                    <li class="partners__item">
+                    <li class="partners__item partners__item--icon--pegas">
                         <a href="" class="partners__link">
                             <img src="./gamesimg/pegas.png" alt="pegas logo" class="partners__img">
                         </a>
@@ -168,7 +168,7 @@
                                 <li class="menu__item">
                                     <a href="./index.html" class="menu__ref">Главная</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="./games.html" class="menu__ref">Игры</a>
                                 </li>
                                 <li class="menu__item">
