--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__item">
+                            <li class="menu__item menu__item--active">
                                 <a href="./index.html" class="menu__ref">Главная</a>
                             </li>
                             <li class="menu__item">
@@ -191,7 +191,7 @@
                         </a>
                         <nav class="menu footer__menu">
                             <ul class="menu__list">
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="./index.html" class="menu__ref">Главная</a>
                                 </li>
                                 <li class="menu__item">
