--- a/reviews.html
+++ b/reviews.html
@@ -28,7 +28,7 @@
                                 <li class="menu__item">
                                     <a href="./games.html" class="menu__ref">Игры</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="./reviews.html" class="menu__ref">Отзывы</a>
                                 </li>
                             </ul>
@@ -264,7 +264,7 @@
                                 <li class="menu__item">
                                     <a href="./games.html" class="menu__ref">Игры</a>
                                 </li>
-                                <li class="menu__item">
+                                <li class="menu__item menu__item--active">
                                     <a href="./reviews.html" class="menu__ref">Отзывы</a>
                                 </li>
                             </ul>
